--- a/caicloud.yml
+++ b/caicloud.yml
@@ -7,3 +7,12 @@ integration:
     - CGO_ENABLED=0
   commands:
     - go run main.go
+postbuild:
+  image: golang:1.5.3
+  environment:
+    - GO15VENDOREXPERIMENT=1
+    - GOOS=linux
+    - GOARCH=amd64
+    - CGO_ENABLED=0
+  commands:
+    - go run main.go
