--- a/caicloud.yml
+++ b/caicloud.yml
@@ -1,5 +1,5 @@
 integration:
-  image: busybox:latest
+  image: golang:1.5.3
   environment:
     - GO15VENDOREXPERIMENT=1
     - GOOS=linux
@@ -8,7 +8,7 @@ integration:
   commands:
     - go run main.go
 postbuild:
-  image: busybox:latest
+  image: golang:1.5.3
   environment:
     - GO15VENDOREXPERIMENT=1
     - GOOS=linux
