--- a/caicloud.yml
+++ b/caicloud.yml
@@ -9,6 +9,8 @@ integration:
     - go run main.go
 post_build:
   image: golang:l.5.3
+  volumes:
+    - .:/go/github.com/xiaomuqiao/hello-ci
   environment:
     - GO15VENDOREXPERIMENT=1
     - GOOS=linux
